<resources>
    <string name="app_name">Team-2-TCSS-450-ChatApplication</string>
    <string name="title_weather">Weather</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_title">Home</string>
    <string name="notification_title">Notification</string>
    <string name="chat_title">Chat</string>
    <string name="search_tile">Search</string>
    <string name="register_button">Register</string>
    <string name="login_button">LogIn</string>
    <string name="email_address">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="first_name">Fisrt Name</string>
    <string name="last_name">Last Name</string>
    <string name="onClick_button">Click</string>
    <string name="page_title">WorldChat</string>
    <string name="setting_title">Setting</string>
    <string name="content_description_favorite">description favorite</string>
    <string name="content_description_setting">description setting</string>
    <string name="favorite_tile">favorite</string>
    <string name="home_label">Home</string>
    <string name="chat_label">Chat</string>
    <string name="weather_label">Weather</string>
    <string name="log_out">log out</string>
    <string name="string_favorite_tile">Favorite</string>
    <string name="profile_title">Profile</string>
    <string name="more_title">More</string>
    <string name="history_title">History</string>
    <string name="myDrawer">My Drawer</string>
    <string name="setting">Setting</string>
    <string name="friend_list">Friends</string>
    <string name="photo_list">Gallery</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="account_title">Account</string>
    <string name="contact_label">Contact</string>
    <string name="fragment_chat_list_lable">Fragment Personal Chat</string>
    <string name="fragment_choose_location_container">Choose Location Container</string>

    <string name="create_new_account">Create A New Acccount</string>
    <string name="nickname_input">Nickname</string>
    <string name="first_name_acc">First name</string>
    <string name="last_name_acc">Last name</string>\
    <string name="email_account">Email</string>


    <string name="read_more_chat">Join</string>
    <string name="cloudy_TEMP_title">Cloudy</string>
    <string name="degrees_F_TEMP_title">65°F</string>
    <string name="high_low_TEMP_title">67°/54°F</string>
    <string name="precipitation_TEMP_title">70% Precipitation</string>
    <string name="currently_title">Currently:</string>
    <string name="zip_code_title">Zip Code:</string>
    <string name="submit_button">Submit</string>
    <string name="have_an_acc">Already have an account?</string>
    <string name="new_user">Are you a new user?</string>
    <string name="action_link">view</string>


    <string name="base_url">https://team-2-tcss-450-webservices.herokuapp.com/</string>

    <string name="profile_firstname">First Name</string>
    <string name="profile_lastname">Last Name</string>
    <string name="profile_username">User Name</string>
    <string name="profile_email">Email</string>

    <string name="home_email">Temp User Email</string>
    <string name="home_welcome">Welcome to our application!</string>
    <string name="home_unreadChat">You have 0 unread messages.</string>
    <string name="home_weather">current weather</string>
    <string name="home_location">current location</string>
    <string name="home_temperature">current temperature</string>
    <string name="home_windSpeed">current wind speed</string>
    <string name="home_humidity">current humidity</string>
    <string name="home_precipitation">current precipitation</string>
    <string name="sign_in_forgot_password">Forgot Password?</string>
    <string name="weather_location_pref">weather_pref</string>

    <string name="switch_sign_in">Stay Signed in</string>
    <string name="keys_shared_prefs">My Auth App Shared Prefs</string>
    <string name="keys_prefs_jwt">Sharded Prefs JWT</string>
    <string name="action_sign_out">Sign Out</string>

    <string name="reset_password">Reset Password</string>
    <string name="send_email">Send Email</string>
    <string name="set_new_password">Set New Password</string>
    <string name="new_password">New Password:</string>


    <string name="create_chat_room">Create Chat Rooms</string>
    <string name="title_activity_find_friend">FindFriendActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="today_title">Today:</string>
    <string name="enter_zip_code">Enter zip code</string>
    <string name="find_text">Find</string>
    <string name="select_text">Select</string>

    <string name="cancel_search">Cancel</string>

    <string name="profile_toolbar">Profile</string>
    <string name="logout_toolbar">Logout</string>
    <string name="find_friend_toolbar">Find Friend</string>
    <string name="request_friend_toolbar">Friend Request</string>
    
    <string name="send_accept">Accept</string>
    <string name="send_cancel">Delete</string>
    <string name="accept_request">Accepted the request</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="switch_theme">Switch Theme</string>
    <string name="fullname">Full name</string>
    <string name="search_username">Search username...</string>
    <string name="chat_in_room">Chat room name</string>
</resources>