<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/share"
        android:icon="@drawable/ic_share_24dp"
        android:title="@string/string_favorite_tile"
        android:contentDescription="@string/content_description_favorite"
        app:showAsAction="always"/>
    <item
        android:id="@+id/app_bar_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="Search"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="always" />

    <item
        android:id="@+id/notification_bar"
        android:icon="@drawable/ic_notifications_active_24sp"
        android:title="@string/notification_title"
        app:showAsAction="always"/>


</menu>