<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/search_layout_root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/backgroundColor"
        app:cardCornerRadius="4dp"
        android:layout_margin="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="4dp"
        android:padding="8dp">

    <ImageView
        android:id="@+id/accept_usernam_image"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:padding="2dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_accept_person_24" />

    <TextView
        android:id="@+id/accept_text_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="20dp"
        android:layout_alignParentTop="true"
        android:text="@string/username"
        android:layout_centerInParent="true"
        android:textColor="?attr/textColor"
        android:textSize="25sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/accept_email"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:padding="2dp"
        android:src="@drawable/ic_accept_email_24"
        android:layout_below="@id/accept_usernam_image"/>

    <TextView
        android:id="@+id/accept_text_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/accept_text_username"
        android:layout_centerInParent="true"
        android:layout_marginStart="160dp"
        android:layout_marginTop="20dp"
        android:textSize="25sp"
        android:text="@string/email"

        android:textColor="?attr/textColor"
        android:textStyle="italic" />



    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/accept_btn"
        android:layout_below="@id/accept_email"
        android:text="@string/send_accept"
        android:layout_marginTop="20dp"
        android:layout_marginStart="40dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cancel_btn_request"
        android:layout_below="@id/accept_email"
        android:text="@string/send_cancel"
        android:layout_marginTop="20dp"
        android:layout_marginStart="220dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/accept_textView"
        android:layout_below="@id/accept_text_email"
        android:text="@string/accept_request"
        android:layout_marginTop="30dp"
        android:textSize="20sp"
        android:layout_marginStart="80dp"
        android:padding="3dp"
        android:visibility="gone"/>


    </RelativeLayout>
</androidx.cardview.widget.CardView>


