<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signin_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="edu.uw.tcss450.team2.signin.SignInFragment">

    <!-- TODO: Update blank fragment layout -->

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/app_logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerInParent="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="30dp"
        android:src="@drawable/logo"
        android:scaleType="centerCrop"
        android:padding="5dp"
       />

<!--    <ImageView-->
<!--            android:id="@+id/app_logo"-->
<!--            android:layout_width="150dp"-->
<!--            android:layout_height="150dp"-->
<!--            android:layout_centerInParent="true"-->
<!--            android:layout_alignParentTop="true"-->
<!--            android:layout_marginTop="100dp"-->
<!--            android:src="@drawable/logo"/>-->
    <EditText
            android:id="@+id/email_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_centerInParent="true"
            android:background="@drawable/login_shape"
            android:drawableLeft="@drawable/left_drawable"
            android:hint="@string/email_address"
            android:textColor="@color/black"
            android:layout_below="@id/app_logo"
            android:inputType="textEmailAddress"
            android:textSize="20dp"
            android:textStyle="bold"

            android:padding="3dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            />

    <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_shape"
            android:drawableLeft="@drawable/password_left_drawable"
            android:hint="@string/password"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:inputType="textPassword"

            android:textStyle="bold"
            android:layout_centerInParent="true"
            android:layout_below="@id/email_address"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:padding="3dp"/>

    <Button
        android:id="@+id/signIn_info_button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/round_shape"
        android:onClick="@string/onClick_button"
        android:text="@string/login_button"
        android:layout_centerInParent="true"
        android:layout_below="@id/password"/>

    <EditText
        android:id="@+id/new_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/switch_signin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:padding="3dp"
        android:text="@string/new_user"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/register_info_button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/round_shape"
        android:onClick="@string/onClick_button"
        android:layout_centerInParent="true"
        android:text="@string/register_button"
        android:layout_below="@id/new_account"
        android:layout_marginTop="10dp"
    />

    <Switch
        android:id="@+id/switch_signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signIn_info_button"
        android:layout_marginStart="-112dp"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@+id/signIn_info_button"
        android:checked="true"
        android:text="@string/switch_sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/switch_sign_in" />


    <!--    <ImageView-->
<!--        android:id="@+id/app_logo"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        android:scaleType="centerCrop"-->
<!--        android:src="@drawable/logo"/>-->
<!--    <EditText-->
<!--        android:id="@+id/email_address"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="200dp"-->
<!--        android:layout_centerInParent="true"-->
<!--        android:layout_alignParentTop="true"-->
<!--        android:background="@drawable/login_shape"-->
<!--        android:drawableLeft="@drawable/left_drawable"-->
<!--        android:hint="@string/email_address"-->
<!--        android:textColor="@color/black"-->
<!--        android:textSize="20dp"-->
<!--        android:inputType="textEmailAddress"-->
<!--        android:textStyle="bold"-->
<!--        android:textColorHint="@color/red"-->
<!--        android:padding="3dp"-->
<!--        android:layout_marginLeft="30dp"-->
<!--        android:layout_marginRight="30dp"-->
<!--        />-->

<!--    <EditText-->
<!--        android:id="@+id/password"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:background="@drawable/login_shape"-->
<!--        android:drawableLeft="@drawable/password_left_drawable"-->
<!--        android:hint="@string/password"-->
<!--        android:textColor="@color/black"-->
<!--        android:textSize="20dp"-->
<!--        android:inputType="textPassword"-->
<!--        android:textColorHint="@color/red"-->
<!--        android:textStyle="bold"-->
<!--        android:layout_centerInParent="true"-->
<!--        android:layout_below="@id/email_address"-->
<!--        android:layout_marginTop="20dp"-->
<!--        android:layout_marginRight="30dp"-->
<!--        android:layout_marginLeft="30dp"-->
<!--        android:padding="3dp"/>-->


<!--    <Button-->
<!--        android:id="@+id/signIn_info_button"-->
<!--        style="@style/Widget.AppCompat.Button.Colored"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="20dp"-->
<!--        android:background="@drawable/round_shape"-->
<!--        android:onClick="@string/onClick_button"-->
<!--        android:text="@string/login_button"-->
<!--        android:textColor="@color/red"-->
<!--        android:layout_centerInParent="true"-->
<!--        android:layout_below="@id/password"/>-->

<!--    <EditText-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:id="@+id/new_account"-->
<!--        android:text="@string/new_user"-->
<!--        android:layout_below="@id/signIn_info_button"-->
<!--        android:layout_marginTop="20dp"-->
<!--        android:textColor="@color/red"-->
<!--        android:textStyle="bold"-->
<!--        android:textAllCaps="false"-->
<!--        android:textSize="20dp"-->
<!--        android:padding="3dp"-->
<!--        android:layout_centerInParent="true"/>-->

<!--    <Button-->
<!--        android:id="@+id/register_info_button"-->
<!--        style="@style/Widget.AppCompat.Button.Colored"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:background="@drawable/round_shape"-->
<!--        android:onClick="@string/onClick_button"-->
<!--        android:layout_centerInParent="true"-->
<!--        android:textColor="@color/red"-->
<!--        android:text="@string/register_button"-->
<!--        android:layout_below="@id/new_account"-->
<!--        android:layout_marginTop="20dp"-->
<!--        />-->



</RelativeLayout>